--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,4 +68,4 @@ jobs:
             fi
           done
         env:
-          NODE_AUTH_TOKEN: ${{secrets.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}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
